# MV-Design

./: .gitignore  README.md  app_main.py  cam_test.py  cv_test.py  exporter.py  yolo_test.py  yolo_test_multiprocess.py  yolo_track.py
yolo11_128_ncnn_model/: metadata.yaml  model_ncnn.py
yolo11n_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
yolo11n_train/: exporter.py  face.yaml  trainer.py
yolo_fastestv2/: CMakeLists.txt  yolo_fastestv2.py
yolo_fastestv2/inc/: platform.h
yolo_fastestv2/lib/pkgconfig/: ncnn.pc
yolo_fastestv2/src/: main.cpp  yolo-fastestv2.cpp
